feat(device): replace find-by-id endpoint with create device endpoint
