# internal/application/dto/request/device_request.go
@@ -1,5 +1,5 @@
 package request
 
-type FindDeviceByIDRequest struct {
-	DeviceID int64 `json:"device_id"`
+type CreateDeviceRequest struct {
+	Name string `json:"name"`
 }
